@@ -1,4 +1,5 @@
 ﻿14.08.
+	- fixed some issues with using manual dependency registration in the IAfterComponentCreatedPolicy
 	- TC now produced doc XML file and PDB is included in the release package
 	- added more logging to Chest
 	- fixed some fragile tests
